--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<link rel="icon" href="favicon.ico?" type="image/x-icon">
 </head>
         <div class="TopBar">
-		<a href="Index.html">
+		<a href="index.html">
             <input type="image" name="ctl00$ctl00" class="Logo" src="Logos/ACBYTES250250.png">
 		<a/>
             <a class="Name">ACBYTES</a>
