--- a/ContactMe.html
+++ b/ContactMe.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="Master/Master.css">
 </head>
         <div class="TopBar">
-		<a href="Index.html">
+		<a href="index.html">
             <input type="image" name="ctl00$ctl00" class="Logo" src="Logos/ACBYTES250250.png">
 			<a/>
             <a class="Name">ACBYTES</a>
