--- a/Projects.html
+++ b/Projects.html
@@ -11,6 +11,7 @@
 <body onload="SetText();">
 <head>
     <link rel="stylesheet" href="Master/Master.css">
+	<title>ACBYTES - Projects</title>
 </head>
         <div class="TopBar">
 		<a href="index.html">
