--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <link rel="stylesheet" href="Master/Master.css">
 	<link rel="icon" href="favicon.ico?" type="image/x-icon">
+	<title>ACBYTES</title>
 </head>
         <div class="TopBar">
 		<a href="index.html">
