--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <link rel="stylesheet" href="Master/Master.css">
 	<link rel="icon" href="favicon.ico?" type="image/x-icon">
 	<title>ACBYTES</title>
+	<meta charset="UTF-8">
+	<meta name="description" content="Alireza Shahbazi - ACBYTES Website">
+	<meta name="keywords" content="ACBYTES,acbytes,acbytes.ir,Alireza Shahbazi, Alireza, Shahbazi, Developer, Programmer, Game Dev, Game Developer, Project">
+	<meta name="author" content="Alireza Shahbazi - ACBYTES">
 </head>
         <div class="TopBar">
 		<a href="index.html">
