--- a/ContactMe.html
+++ b/ContactMe.html
@@ -12,6 +12,10 @@
 <head>
     <link rel="stylesheet" href="Master/Master.css">
 	<title>ACBYTES - Contact Me</title>
+	<meta charset="UTF-8">
+	<meta name="description" content="Alireza Shahbazi - ACBYTES Website">
+	<meta name="keywords" content="ACBYTES,acbytes,acbytes.ir,Alireza Shahbazi, Alireza, Shahbazi, Developer, Programmer, Game Dev, Game Developer, Project">
+	<meta name="author" content="Alireza Shahbazi - ACBYTES">
 </head>
         <div class="TopBar">
 		<a href="index.html">
