--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<meta name="description" content="Alireza Shahbazi - ACBYTES Website">
 	<meta name="keywords" content="ACBYTES,acbytes,acbytes.ir,Alireza Shahbazi, Alireza, Shahbazi, Developer, Programmer, Game Dev, Game Developer, Project">
 	<meta name="author" content="Alireza Shahbazi - ACBYTES">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
         <div class="TopBar">
 		<a href="index.html">
