--- a/Projects.html
+++ b/Projects.html
@@ -29,19 +29,19 @@
     <header title="ACBYTES - Projects">
         <link href="Stylesheets/ProjectsSS.css" rel="stylesheet" />
     </header>
-	<div class="MainContainer">
+	<div class="MainContainer" onclick="">
         <p class="MainHeader">Simple C# AI Library For Training a Q-Learning Algorithm</p>
         <p class="MainBody">I created this project to train a Q-Learning algorithm. This library is so small and might not be able to help you with your serious projects. I did this for fun.</p>
         <input type="submit" name="ctl00$Content$ctl00" value="Go To GitHub" onclick="javascript:window.open('https://github.com/ACBYTES/Simple-CS-AI-Library');" class="GTPButton">
     </div>
 
-	<div class="MainContainer">
+	<div class="MainContainer" onclick="">
         <p class="MainHeader" style="margin-top: -75px;">Simple C# ANN Library</p>
         <p class="MainBody">I created this project to train a NN algorithm. This library is so small and might not be able to help you with your serious projects. I did this for fun.</p>
         <input type="submit" name="ctl00$Content$ctl01" value="Go To GitHub" onclick="javascript:window.open('https://github.com/ACBYTES/Simple-CS-ANN-Library');" class="GTPButton">
     </div>
 
-	<div class="MainContainer">
+	<div class="MainContainer" onclick="">
         <p class="MainHeader" style="margin-top: -75px;">Distant Android Phone Controller - ACNDC</p>
         <p class="MainBody">
             I created this project mostly to help my grandparents when they face a problem with their phones. I used a website as a server because at the time of creating this project, I wans't able to use
@@ -50,7 +50,7 @@
         </p>
     </div>
 
-	<div class="MainContainer">
+	<div class="MainContainer" onclick="">
         <p class="MainHeader" style="margin-top: -75px;">Project Controller - Project Share Manager</p>
         <p class="MainBody">
             I created this project when I wanted to cooperate with some friends for creating a game. I wanted to add a real-time watcher to the program but I didn't completely finish it as I was supposed to sit for
@@ -59,7 +59,7 @@
         <input type="submit" name="ctl00$Content$ctl02" value="Go To GitHub" onclick="javascript:window.open('https://github.com/ACBYTES/Project-Share-Manager');" class="GTPButton">
     </div>
 
-    <div class="MainContainer">
+    <div class="MainContainer" onclick="">
         <p class="MainHeader" style="margin-top: -75px;">Automated Parallel Exam Processor & Report Generator - EJAS</p>
         <p class="MainBody" style="margin-top: -35px">
             I created this project for a company named EJOB and a school called Salam in my country, Iran, so that they can give raw data to the program and the program automatically checks and calculates results for each person
@@ -69,7 +69,7 @@
         </p>
     </div>
 
-    <div class="MainContainer" style="margin-bottom: 60px;">
+    <div class="MainContainer" onclick="" style="margin-bottom: 60px;">
         <p class="MainHeader" style="margin-top: -75px;">So Many Automated Applications For Registering, Doing Specific Tasks, Etc... In Different Websites</p>
         <p class="MainBody">
             I created projects like this in C# and using WebDriver & These Projects are Actually Dependent On What You Want To Do But Everything is Possible in Thses Cases as I Create Everything From Scratch Based on What You Need.
