--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
     <header title="ACBYTES">
         <link rel="stylesheet" href="Stylesheets/DefaultSS.css" />
     </header>
-    <div class="MainContainer">
+    <div class="MainContainer" onclick="">
         <p class="MainHeader">Who is Alireza Shahbazi (ACBYTES)</p>
         <p class="MainBody">
             I'm Alireza Shahbazi. I'm a programmer, a game developer and a web developer. I've got five years of experience in C# & then I got to learn C++. I've used C# mainly for creating applications for Windows, iOS, Android,
             Web, etc... I've been using Unity & UE4 for game development and I've made some games as well.
         </p>
     </div>
-    <div class="MainContainer">
+    <div class="MainContainer" onclick="">
         <p class="MainHeader" style="margin-top: -75px;">Projects</p>
         <p class="MainBody">I've done a lot of projects using C# and C++. I've developed games, applications, websites, licensing systems, etc...; You can see my projects in the Projects page.</p>
     </div>
-    <div class="MainContainer">
+    <div class="MainContainer" onclick="">
         <p class="MainHeader" style="margin-top: -75px;">Resume</p>
         <p class="MainBody">You can download my resume, through the link below:</p>
         <input type="submit" name="ctl00$Content$ctl02" value="Download From Website" onclick="javascript:window.open('Docs/AlirezaShahbazi(ACBYTES)sResume.pdf');" class="DownloadButton">
