--- a/OEDUY/HComponents/BBContent.html
+++ b/OEDUY/HComponents/BBContent.html
@@ -2,5 +2,5 @@
             <link rel="stylesheet" href="https://acbytes.ir/OEDUY/HComponents/BBContent.css"/>
             <script src="/Master/MJS.js"></script>
             <p>Developed and Sketched by ACBYTES</p>
-            <input type="image" src="/Creator/ACBYTES.png" class="BottomBL" onclick="RTDW();" />
+            <input type="image" src="https://acbytes.ir/Logos/ACBYTES250250.png" class="BottomBL" onclick="RTDW();" />
         </div>
