--- a/OEDUY/HComponents/BBContent.html
+++ b/OEDUY/HComponents/BBContent.html
@@ -1,6 +1,6 @@
         <div id="BottomBar" class="BottomBar">
             <link rel="stylesheet" href="https://acbytes.ir/OEDUY/HComponents/BBContent.css"/>
             <script src="https://acbytes.ir/OEDUY/HComponents/MJS.js"></script>
-            <p>Developed and Sketched by ACBYTES</p>
+            <p>Developed and Sketched by ACBYTES (Alireza Shahbazi)</p>
             <input type="image" src="https://acbytes.ir/Logos/ACBYTES250250.png" class="BottomBL" onclick="RTDW();" />
         </div>
