--- a/index.html
+++ b/index.html
@@ -1,58 +1,44 @@
-﻿<html>
-<script>
-	function SetText()
-	{
-		var element = document.getElementById("lblFooter");
-		var dateI = new Date();
-		var year = dateI.getFullYear();
-		element.innerHTML = "© 2020 - " + year + " Made by Alireza Shahbazi (ACBYTES)";
-	}
-</script>
-<body onload="SetText();">
-<head>
+<html>
+<header>
+    <script src="Main.js"></script>
+    <link href="StyleSheets/Index.css" rel="stylesheet">
+    <title>ACBYTES - Alireza Shahbazi</title>
 
-    <link rel="stylesheet" href="Master/Master.css">
-	<link rel="icon" href="favicon.ico?" type="image/x-icon">
-	<title>ACBYTES</title>
-	<meta charset="UTF-8">
-	<meta name="description" content="Alireza Shahbazi - ACBYTES Website">
-	<meta name="keywords" content="ACBYTES,acbytes,acbytes.ir,Alireza Shahbazi, Alireza, Shahbazi, Developer, Programmer, Game Dev, Game Developer, Project">
-	<meta name="author" content="Alireza Shahbazi - ACBYTES">
-</head>
-        <div class="TopBar">
-		<a href="index.html">
-            <input type="image" name="ctl00$ctl00" class="Logo" src="Logos/ACBYTES250250.png">
-		<a/>
-            <a class="Name">ACBYTES</a>
-            <a class="HyperLink" href="ContactMe.html">Contact Me</a>
-            <a class="HyperLink" href="Projects.html">Projects</a>
-            <a class="HyperLink" href="https://github.com/acbytes">GitHub</a>
-        </div>
-    <header title="ACBYTES">
-        <link rel="stylesheet" href="Stylesheets/DefaultSS.css" />
-    </header>
-    <div class="MainContainer" onclick="">
-        <p class="MainHeader">Who is Alireza Shahbazi (ACBYTES)</p>
-        <p class="MainBody">
-            I'm Alireza Shahbazi. I'm a programmer, a game developer and a web developer. I've got five years of experience in C# & then I got to learn C++. I've used C# mainly for creating applications for Windows, iOS, Android,
-            Web, etc... I've been using Unity & UE4 for game development and I've made some games as well.
-        </p>
+    <meta charset="UTF-8">
+    <meta name="description" content="Alireza Shahbazi - ACBYTES Website">
+    <meta name="keywords"
+        content="ACBYTES,acbytes,acbytes.ir,Alireza Shahbazi,Alireza,Shahbazi,Developer,Programmer,Game Dev,Game Developer,Project">
+    <meta name="author" content="Alireza Shahbazi - ACBYTES,Alireza Shahbazi,ACBYTES,acbytes">
+
+</header>
+
+<body onload="SetDefaultViews();">
+    <div class="cont">
+        <a class="aRedirector" href="projects.html">
+            <div class="sepRedirector" id="projectsP">
+                <h1>Projects</h1>
+            </div>
+        </a>
+        <a class="aRedirector" href="about.html">
+            <div class="sepRedirector" id="aboutP">
+                <h1>About Me</h1>
+            </div>
+        </a>
+        <a class="aRedirector" href="contact.html">
+            <div class="sepRedirector" id="contactP">
+                <h1>Contact Me</h1>
+            </div>
+        </a>
+        <a class="aRedirector" target="_blank" rel="noopener noreferrer" href="https://github.com/acbytes">
+            <div class="sepRedirector" id="gitHubP">
+                <h1>GitHub</h1>
+            </div>
+        </a>
+        <a class="aRedirector" onclick="ShowDownloadDialog();">
+            <div class="sepRedirector" id="resumeP">
+                <h1>Resume</h1>
+            </div>
+        </a>
     </div>
-    <div class="MainContainer" onclick="">
-        <p class="MainHeader" style="margin-top: -75px;">Projects</p>
-        <p class="MainBody">I've done a lot of projects using C# and C++. I've developed games, applications, websites, licensing systems, etc...; You can see my projects in the Projects page.</p>
-    </div>
-    <div class="MainContainer" onclick="">
-        <p class="MainHeader" style="margin-top: -75px;">Resume</p>
-        <p class="MainBody">You can download my resume, through the link below:</p>
-        <input type="submit" name="ctl00$Content$ctl02" value="Download From Website" onclick="javascript:window.open('Docs/AlirezaShahbazi(ACBYTES)sResume.pdf');" class="DownloadButton">
-		<input type="submit" name="ctl00$Content$ctl00" value="Download from Google Drive" onclick="javascript:window.open('https://drive.google.com/file/d/1wQ6VJDz2Igg0YhjOgOVAT2RSNWgtglBF/view?usp=sharing');" class="DownloadButtonGD">
-        <input type="submit" name="ctl00$Content$ctl01" value="Download from GitHub" onclick="javascript:window.open('https://github.com/ACBYTES/ACBYTES/blob/master/AlirezaShahbazi(ACBYTES)sResume.pdf');" class="DownloadButtonGH">
-    </div>
-	
-		<div class="Footer">
-            <span id="lblFooter" class="FooterContent">© 2020 - 2020 Made by Alireza Shahbazi (ACBYTES)</span>
-        </div>
-	
-	<body/>
-<html/>
+</body>
+</html>
