--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <header>
     <script src="Main.js"></script>
-    <link href="StyleSheets/Index.css" rel="stylesheet">
+    <link href="Stylesheets/Index.css" rel="stylesheet">
     <title>ACBYTES - Alireza Shahbazi</title>
 
     <meta charset="UTF-8">
