--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 
 <body onload="SetDefaultViews(); StartTrackers();">
     <div class="cont">
-        <div class="sepRedirector">
+        <div class="sepRedirector" onclick="">
             <h1>About Me:</h1>
             <p>I'm Alireza Shahbazi and I'm mostly active with the name 'ACBYTES'. I'm a programmer, game developer and
                 web developer. I've been programming for around 6 years now and I know
@@ -23,7 +23,7 @@
                 learning new stuff and am becoming more professional every single second.
             </p>
         </div>
-        <div class="sepRedirector">
+        <div class="sepRedirector" onclick="">
             <h1>Skills</h1>
             <div class="sepRedirector">
                 <h1>C#, Xamarin, ASP.NET</h1>
