--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
 
 <body onload="SetDefaultViews();">
     <div class="cont">
-        <a class="aRedirector" href="projects.html">
+        <a class="aRedirector" href="projects.html" onclick="">
             <div class="sepRedirector" id="projectsP">
                 <h1>Projects</h1>
             </div>
         </a>
-        <a class="aRedirector" href="about.html">
+        <a class="aRedirector" href="about.html" onclick="">
             <div class="sepRedirector" id="aboutP">
                 <h1>About Me</h1>
             </div>
         </a>
-        <a class="aRedirector" href="contact.html">
+        <a class="aRedirector" href="contact.html" onclick="">
             <div class="sepRedirector" id="contactP">
                 <h1>Contact Me</h1>
             </div>
         </a>
-        <a class="aRedirector" target="_blank" rel="noopener noreferrer" href="https://github.com/acbytes">
+        <a class="aRedirector" target="_blank" rel="noopener noreferrer" href="https://github.com/acbytes" onclick="">
             <div class="sepRedirector" id="gitHubP">
                 <h1>GitHub</h1>
             </div>
         </a>
-        <a class="aRedirector" onclick="ShowDownloadDialog();">
+        <a class="aRedirector" onclick="ShowDownloadDialog();" onclick="">
             <div class="sepRedirector" id="resumeP">
                 <h1>Resume</h1>
             </div>
