--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <header>
     <script src="Main.js"></script>
     <link href="StyleSheets/Contact.css" rel="stylesheet">
-    <title>Projects</title>
+    <title>Contact Me</title>
 
     <meta charset="UTF-8">
     <meta name="description" content="Alireza Shahbazi - ACBYTES Website">
