--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <header>
     <script src="Main.js"></script>
     <link href="StyleSheets/About.css" rel="stylesheet">
-    <title>Projects</title>
+    <title>About Me</title>
 
     <meta charset="UTF-8">
     <meta name="description" content="Alireza Shahbazi - ACBYTES Website">
