--- a/projects.html
+++ b/projects.html
@@ -57,6 +57,9 @@
         <div class="sepRedirector" onclick="">
             <h1>Automated Applications For Performing Tasks</h1>
         </div>
+        <div class="sepRedirector" onclick="">
+        <h1>Different Telegram Bots</h1>
+        </div>
     </div>
 </body>
 </html>
