--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
         </div>
         <div class="sepRedirector" onclick="">
             <h1>Chunked Data Transfer Application</h1>
-            <p>Transferring data in chuncks with the ability of resuming data transfer based on previous data if connections fail or and error occurs.</p>
+            <p>Written in C# and using the TCP stream, this application can transfer data with configurable chunk sizes, timeouts, etc... Multiple files can be handled at once using one stream and multiple threads with the help of mutexes.</p>
         </div>
         <div class="sepRedirector" onclick="">
             <h1>Distant Android Phone Controller</h1>
