--- a/projects.html
+++ b/projects.html
@@ -25,8 +25,11 @@
             <p>Using different texture layers, this application creates an RGB mask map for HDRP usage.</p>
         </div>
         <div class="sepRedirector" onclick="">
-            <h1>Chunked Data Transfer Application</h1>
+            <h1>Chunked Data Transfer</h1>
             <p>Written in C# and using the TCP stream, this application can transfer data with configurable chunk sizes, timeouts, etc... Multiple files can be handled at once using one stream and multiple threads with the help of mutexes.</p>
+            <a href="https://google.com" target="_blank">
+            <img class="btnGH">
+            </a>
         </div>
         <div class="sepRedirector" onclick="">
             <h1>Distant Android Phone Controller</h1>
