--- a/projects.html
+++ b/projects.html
@@ -27,8 +27,8 @@
         <div class="sepRedirector" onclick="">
             <h1>Chunked Data Transfer</h1>
             <p>Written in C# and using the TCP stream, this application can transfer data with configurable chunk sizes, timeouts, etc... Multiple files can be handled at once using one stream and multiple threads with the help of mutexes.</p>
-            <a href="https://google.com" target="_blank">
-            <img class="btnGH">
+            <a href="https://google.com" class="btnGH" target="_blank">
+            <img>
             </a>
         </div>
         <div class="sepRedirector" onclick="">
