--- a/projects.html
+++ b/projects.html
@@ -15,6 +15,13 @@
 <body onload="SetDefaultViews();">
     <div class="cont">
         <div class="sepRedirector" onclick="">
+            <h1>ReCPP</h1>
+            <p>Reimplementing different C++ classes and functionalities for learning purposes. Things such as smart pointers, functions, type_traits, etc...</p>
+            <a href="https://github.com/ACBYTES/ReCPP" class="btnGH" target="_blank">
+            <img>
+            </a>
+        </div>
+        <div class="sepRedirector" onclick="">
             <h1>Online Educational Website</h1>
             <p>This website was built to help students in my country to see their books online but with a difference. I created an application for some editors and teachers to create questions, tests, videos, images and audios related to each part of the book and using that, they upload all the data above in different parts of the book and when the students click on those specific boxes in their books, they see teachers teaching those parts and see the related information like questions, tests, images, etc... Teachers and editors specify the parts they would like the students to click on in the application and attach the needed data.
                 In the website, those parts appear as boxes that students can click on and learn important stuff and take some tests and answer some questions related to that part.
