--- a/about.html
+++ b/about.html
@@ -16,11 +16,11 @@
     <div class="cont">
         <div class="sepRedirector" onclick="">
             <h1>About Me:</h1>
-            <p>I'm Alireza Shahbazi and I'm mostly active with the name 'ACBYTES'. I'm a programmer, game developer/programmer and
+            <p>I'm Alireza Shahbazi and I'm mostly active with the name 'ACBYTES'. I'm a programmer, game programmer/developer and
                 web developer. I've been programming for around 6 years now and I know
-                C#, C++, Unity, UE4, ASP.NET, Xamarin, MS-SQL, ADO.NET, HTML and CSS.
-                I love programming and I spend around 14-15 hours a day on programming. I'm always developing and
-                learning new stuff and am becoming more professional every single second.
+                C++, C#, Unity, UE4, ASP.NET, Xamarin, MS-SQL, ADO.NET, HTML and CSS.
+                I love programming and I spend around 8+ hours a day on programming. I'm always developing and
+                learning new stuff.
             </p>
         </div>
         <div class="sepRedirector" onclick="">
