Updated resume, Updated projects.html

--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
     <div class="cont">
         <div class="sepRedirector" onclick="">
             <h1>ReCPP</h1>
-            <p>Reimplementing different C++ classes and functionalities for learning purposes. Things such as smart pointers, functions, type_traits, etc...</p>
+            <p>Reimplementing different C++ classes and functionalities for learning purposes. Things such as smart pointers, function, type_traits, etc...</p>
             <a href="https://github.com/ACBYTES/ReCPP" class="btnGH" target="_blank">
             <img>
             </a>
