--- a/about.html
+++ b/about.html
@@ -17,8 +17,8 @@
         <div class="sepRedirector" onclick="">
             <h1>About Me:</h1>
             <p>I'm Alireza Shahbazi and I'm mostly active with the name 'ACBYTES'. I'm a programmer, game programmer/developer and
-				web developer. I've been programming for around 4 years now and I know
-				C++, C#, Unity, UE4, ASP.NET, Xamarin, MS-SQL, ADO.NET, HTML and CSS.
+				web developer. I've been programming for years now and I know
+				C++, C#, Unity, Unreal Engine, ASP.NET, Xamarin, MS-SQL, ADO.NET, HTML and CSS.
 				I would like to be active as a programmer, game/gameplay programmer, web programmer, etc... (Anything related to back-end in general).
             </p>
         </div>
