--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="Alireza Shahbazi - ACBYTES Website">
     <meta name="keywords"
-        content="ACBYTES,acbytes,acbytes.ir,Alireza Shahbazi,Alireza,Shahbazi,Developer,Programmer,Game Dev,Game Developer,Project">
+        content="ACBYTES,acbytes,acbytes.ir,acbytes.com,Alireza Shahbazi,Alireza,Shahbazi,Developer,Programmer,Game Dev,Game Developer,Project">
     <meta name="author" content="Alireza Shahbazi - ACBYTES,Alireza Shahbazi,ACBYTES,acbytes">
 
 </header>
