--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     <div class="cont">
         <div class="sepRedirector">
         <h1>You can use either of these ways to contact me:</h1>
-        <input type="image" src="Images/TMail.svg" onclick="javascript:window.location.href='mailto:dev@acbytes.com';"/>
+        <input type="image" src="Images/Mail.svg" onclick="javascript:window.location.href='mailto:dev@acbytes.com';"/>
         <input type="image" src="Images/Phone.svg" onclick="javascript:window.location.href='tel:+17786833204';"/>
         <input type="image" src="Images/Telegram.svg" onclick="javascript:window.open('https://t.me/acbytes');"/>
     </div>
