--- a/projects.html
+++ b/projects.html
@@ -53,9 +53,9 @@
         <div class="sepRedirector" onclick="">
             <h1>Different Websites Using ASP.NET</h1>
         </div>
-        <div class="sepRedirector" onclick="">
-            <h1>Automated Parallel Exam Processor & Report Generator</h1>
-            <p>This application was created for a company in my country. It gets data from an excel file and using parallel operations and loops, it generates a result as a PDF file. You can see an example of a generated result below:</p>
+        <div id="amtepprg" class="sepRedirector" onclick="">
+            <h1>Automated Multi-Thread Exam Processor & PDF Report Generator</h1>
+            <p>Written in C# for <a href="https://www.salamsch.com">Salam School</a>, this application reads multiple large Excel file (Data base), containing thousands of student responses to a multi-choice questionnaire, job titles and descriptions, education paths, etc. Using a specific formula to identify the student’s personality, all the responses are processed and based on their personality, they’re matched with multiple jobs. At last, a PDF file is generated with their information, personality graph, extra information and multiple pages, providing them with the jobs that match their personality and helping them choose the correct education path, learn relevant softwares, etc.You can see an example of a generated result below:</p>
             <input type="image" class="scImg" src="Images/PARALLELERG0.PNG" onclick="javascript:window.open('Images/PARALLELERG0.PNG');"/>
             <input type="image" class="scImg" src="Images/PARALLELERG1.PNG" onclick="javascript:window.open('Images/PARALLELERG1.PNG');"/>
         </div>
