Updated Projects.css, Updated projects.html

--- a/projects.html
+++ b/projects.html
@@ -17,8 +17,7 @@
         <div class="sepRedirector" onclick="">
             <h1>ReCPP</h1>
             <p>Reimplementing different C++ classes and functionalities for learning purposes. Things such as smart pointers, function, type_traits, etc...</p>
-            <a href="https://github.com/ACBYTES/ReCPP" class="btnGH" target="_blank">
-            <img>
+            <a href="https://github.com/ACBYTES/ReCPP" class="redirector" target="_blank">
             </a>
         </div>
         <div class="sepRedirector" onclick="">
@@ -34,8 +33,7 @@
         <div class="sepRedirector" onclick="">
             <h1>Chunked Data Transfer</h1>
             <p>Written in C# and using the TCP stream, this application can transfer data with configurable chunk sizes, timeouts, etc... Multiple files can be handled at once using one stream and multiple threads with the help of mutexes.</p>
-            <a href="https://github.com/ACBYTES/DataTransfer" class="btnGH" target="_blank">
-            <img>
+            <a href="https://github.com/ACBYTES/DataTransfer" class="redirector" target="_blank">
             </a>
         </div>
         <div class="sepRedirector" onclick="">
@@ -45,6 +43,7 @@
         <div class="sepRedirector" onclick="">
             <h1>Regret - Game Created Using UE4 and C++</h1>
             <p>In Progress...</p>
+            <a href="https://github.com/ACBYTES/ReCPP" class="redirector" target="_blank"></a>
         </div>
         <div class="sepRedirector" onclick="">
             <h1>Project Controller</h1>
