Updated all html pages, Updated Projects.css, Updated Shared.css

--- a/projects.html
+++ b/projects.html
@@ -1,18 +1,21 @@
+<!DOCTYPE html>
+
 <html>
-<header>
-    <script src="Main.js"></script>
-    <link href="StyleSheets/Projects.css" rel="stylesheet">
-    <title>Projects</title>
-
-    <meta charset="UTF-8">
-    <meta name="description" content="Alireza Shahbazi - ACBYTES Website">
-    <meta name="keywords"
-        content="ACBYTES,acbytes,acbytes.ir,acbytes.com,Alireza Shahbazi,Alireza,Shahbazi,Developer,Programmer,Game Dev,Game Developer,Project">
-    <meta name="author" content="Alireza Shahbazi - ACBYTES,Alireza Shahbazi,ACBYTES,acbytes">
-
-</header>
-
 <body onload="SetDefaultViews();">
+
+    <header>
+        <script src="Main.js"></script>
+        <link href="StyleSheets/Projects.css" rel="stylesheet">
+        <title>Projects</title>
+    
+        <meta charset="UTF-8">
+        <meta name="description" content="Alireza Shahbazi - ACBYTES Website">
+        <meta name="keywords"
+            content="ACBYTES,acbytes,acbytes.ir,acbytes.com,Alireza Shahbazi,Alireza,Shahbazi,Developer,Programmer,Game Dev,Game Developer,Project">
+        <meta name="author" content="Alireza Shahbazi - ACBYTES,Alireza Shahbazi,ACBYTES,acbytes">
+    
+    </header>
+
     <div class="cont">
         <div class="sepRedirector" onclick="">
             <h1>ReCPP</h1>
