--- a/contact.html
+++ b/contact.html
@@ -1,18 +1,21 @@
+<!DOCTYPE html>
+
 <html>
-<header>
-    <script src="Main.js"></script>
-    <link href="StyleSheets/Contact.css" rel="stylesheet">
-    <title>Contact Me</title>
-
-    <meta charset="UTF-8">
-    <meta name="description" content="Alireza Shahbazi - ACBYTES Website">
-    <meta name="keywords"
-        content="ACBYTES,acbytes,acbytes.ir,acbytes.com,Alireza Shahbazi,Alireza,Shahbazi,Developer,Programmer,Game Dev,Game Developer,Project">
-    <meta name="author" content="Alireza Shahbazi - ACBYTES,Alireza Shahbazi,ACBYTES,acbytes">
-
-</header>
-
 <body onload="SetDefaultViews();">
+
+    <header>
+        <script src="Main.js"></script>
+        <link href="StyleSheets/Contact.css" rel="stylesheet">
+        <title>Contact Me</title>
+    
+        <meta charset="UTF-8">
+        <meta name="description" content="Alireza Shahbazi - ACBYTES Website">
+        <meta name="keywords"
+            content="ACBYTES,acbytes,acbytes.ir,acbytes.com,Alireza Shahbazi,Alireza,Shahbazi,Developer,Programmer,Game Dev,Game Developer,Project">
+        <meta name="author" content="Alireza Shahbazi - ACBYTES,Alireza Shahbazi,ACBYTES,acbytes">
+    
+    </header>
+
     <div class="cont">
         <div class="sepRedirector">
         <h1>You can use either of these ways to contact me:</h1>
