--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
             <h1>Distant Android Phone Controller</h1>
             <p>Using this application, we can control Android phones with kernel based commands. The phone gets connected to a server and the client on the other side of the server, using the controller is going to see the phone's screen and also send commands and also click arbitrary locations for touch and swipe commands.</p>
         </div>
-        <div class="sepRedirector" onclick="">
+        <div id="regret" class="sepRedirector" onclick="">
             <h1>Regret - Game Created Using UE4 and C++</h1>
             <p>In Progress...</p>
             <a href="#" class="redirector blogButton" target="_blank"></a>
