--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
             </a>
         </div>
         <div class="sepRedirector" onclick="">
-            <h1>Online Educational Website</h1>
+            <h1>Online Educational Website (ASP.NET)</h1>
             <p>This website was built to help students in my country to see their books online but with a difference. I created an application for some editors and teachers to create questions, tests, videos, images and audios related to each part of the book and using that, they upload all the data above in different parts of the book and when the students click on those specific boxes in their books, they see teachers teaching those parts and see the related information like questions, tests, images, etc... Teachers and editors specify the parts they would like the students to click on in the application and attach the needed data.
                 In the website, those parts appear as boxes that students can click on and learn important stuff and take some tests and answer some questions related to that part.
             </p>
@@ -51,9 +51,6 @@
         <div class="sepRedirector" onclick="">
             <h1>Project Controller</h1>
             <p>This is like an on-device project version controller that compares different versions, packaging changed or edited files so that no similar files get transferred again.</p>
-        </div>
-        <div class="sepRedirector" onclick="">
-            <h1>Different Websites Using ASP.NET</h1>
         </div>
         <div id="amtepprg" class="sepRedirector" onclick="">
             <h1>Automated Multi-Thread Exam Processor & PDF Report Generator</h1>
