--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 
 <html>
-<body onload="SetDefaultViews();">
-
-    <header>
-        <script src="Main.js"></script>
+    <head>
+        <script src="Scripts/Main.js"></script>
         <link href="StyleSheets/Index.css" rel="stylesheet">
         <title>ACBYTES - Alireza Shahbazi</title>
     
         <meta charset="UTF-8">
         <meta name="description" content="Alireza Shahbazi - ACBYTES Website">
         <meta name="keywords"
-            content="ACBYTES,acbytes,acbytes.ir,acbytes.com,Alireza Shahbazi,Alireza,Shahbazi,Developer,Programmer,Game Dev,Game Developer,Project">
-        <meta name="author" content="Alireza Shahbazi - ACBYTES,Alireza Shahbazi,ACBYTES,acbytes">
+            content="ACBYTES,acbytes,acbytes.ir,acbytes.com,Alireza Shahbazi,Alireza,Shahbazi,Developer,Programmer,Game Dev,Game Developer,Project,Unreal Engine,UE4,UE5,Unreal Programmer,Game Programmer,c++,c#,C++,C#">
+        <meta name="author" content="Alireza Shahbazi - ACBYTES">
     
-    </header>
-
+    </head>
+<body onload="SetDefaultViews();">
     <div class="cont">
         <a class="aRedirector" href="projects.html" onclick="">
             <div class="sepRedirector" id="projectsP">
@@ -30,6 +28,11 @@
         <a class="aRedirector" href="contact.html" onclick="">
             <div class="sepRedirector" id="contactP">
                 <h1>Contact Me</h1>
+            </div>
+        </a>
+        <a class="aRedirector" target="_blank" rel="noopener noreferrer" href="https://github.com/acbytes" onclick="">
+            <div class="sepRedirector" id="gitHubP">
+                <h1>GitHub</h1>
             </div>
         </a>
         <a class="aRedirector" target="_blank" rel="noopener noreferrer" href="https://github.com/acbytes" onclick="">
