--- a/contact.html
+++ b/contact.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 
 <html>
-<body onload="SetDefaultViews();">
-
-    <header>
-        <script src="Main.js"></script>
-        <link href="StyleSheets/Contact.css" rel="stylesheet">
-        <title>Contact Me</title>
+    <head>
+        <script src="Scripts/Main.js"></script>
+        <link href="StyleSheets/Index.css" rel="stylesheet">
+        <title>ACBYTES - Alireza Shahbazi</title>
     
         <meta charset="UTF-8">
         <meta name="description" content="Alireza Shahbazi - ACBYTES Website">
         <meta name="keywords"
-            content="ACBYTES,acbytes,acbytes.ir,acbytes.com,Alireza Shahbazi,Alireza,Shahbazi,Developer,Programmer,Game Dev,Game Developer,Project">
-        <meta name="author" content="Alireza Shahbazi - ACBYTES,Alireza Shahbazi,ACBYTES,acbytes">
+            content="ACBYTES,acbytes,acbytes.ir,acbytes.com,Alireza Shahbazi,Alireza,Shahbazi,Developer,Programmer,Game Dev,Game Developer,Project,Unreal Engine,UE4,UE5,Unreal Programmer,Game Programmer,c++,c#,C++,C#">
+        <meta name="author" content="Alireza Shahbazi - ACBYTES">
     
-    </header>
-
+    </head>
+<body onload="SetDefaultViews();">
     <div class="cont">
         <div class="sepRedirector">
         <h1>You can use either of these ways to contact me:</h1>
