--- a/projects.html
+++ b/projects.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 
 <html>
-<body onload="SetDefaultViews();">
-
-    <header>
-        <script src="Main.js"></script>
-        <link href="StyleSheets/Projects.css" rel="stylesheet">
-        <title>Projects</title>
+    <head>
+        <script src="Scripts/Main.js"></script>
+        <link href="StyleSheets/Index.css" rel="stylesheet">
+        <title>ACBYTES - Alireza Shahbazi</title>
     
         <meta charset="UTF-8">
         <meta name="description" content="Alireza Shahbazi - ACBYTES Website">
         <meta name="keywords"
-            content="ACBYTES,acbytes,acbytes.ir,acbytes.com,Alireza Shahbazi,Alireza,Shahbazi,Developer,Programmer,Game Dev,Game Developer,Project">
-        <meta name="author" content="Alireza Shahbazi - ACBYTES,Alireza Shahbazi,ACBYTES,acbytes">
+            content="ACBYTES,acbytes,acbytes.ir,acbytes.com,Alireza Shahbazi,Alireza,Shahbazi,Developer,Programmer,Game Dev,Game Developer,Project,Unreal Engine,UE4,UE5,Unreal Programmer,Game Programmer,c++,c#,C++,C#">
+        <meta name="author" content="Alireza Shahbazi - ACBYTES">
     
-    </header>
-
+    </head>
+<body onload="SetDefaultViews();">
     <div class="cont">
         <div class="sepRedirector" onclick="">
             <h1>ReCPP</h1>
@@ -46,7 +44,7 @@
         <div id="regret" class="sepRedirector" onclick="">
             <h1>Regret - Game Created Using UE4 and C++</h1>
             <p>In Progress...</p>
-            <a href="#" class="redirector blogButton" target="_blank"></a>
+            <a href="https://docs.acbytes.com/categories/regret" class="redirector blogButton" target="_blank"></a>
         </div>
         <div class="sepRedirector" onclick="">
             <h1>Project Controller</h1>
