Updated Index.css, Updated index.html, Added Docs.gif and Docs.jpg

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 <h1>Contact Me</h1>
             </div>
         </a>
-        <a class="aRedirector" target="_blank" rel="noopener noreferrer" href="https://github.com/acbytes" onclick="">
-            <div class="sepRedirector" id="gitHubP">
-                <h1>GitHub</h1>
+        <a class="aRedirector" target="_blank" rel="noopener noreferrer" href="https://docs.acbytes.com" onclick="">
+            <div class="sepRedirector" id="docsP">
+                <h1>Docs</h1>
             </div>
         </a>
         <a class="aRedirector" target="_blank" rel="noopener noreferrer" href="https://github.com/acbytes" onclick="">
