Updated all pages

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <script src="Scripts/Main.js"></script>
-        <link href="StyleSheets/Index.css" rel="stylesheet">
+        <link href="StyleSheets/Contact.css" rel="stylesheet">
         <title>ACBYTES - Alireza Shahbazi</title>
     
         <meta charset="UTF-8">
