--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <script src="Scripts/Main.js"></script>
+        <link href="StyleSheets/Shared.css" rel="stylesheet">
         <link href="StyleSheets/About.css" rel="stylesheet">
         <title>ACBYTES - Alireza Shahbazi</title>
     
