--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,10 @@
         </div>
         <div id="regret" class="sepRedirector" onclick="">
             <h1>Regret - Game Created Using UE4 and C++</h1>
-            <p>In Progress...</p>
+            <p>
+                In Progress...
+                Documentation:
+            </p>
             <a href="https://docs.acbytes.com/categories/regret" class="redirector blogButton" target="_blank"></a>
         </div>
         <div class="sepRedirector" onclick="">
