Updated Resume, Added Anton.ttf, Updated all scripts, Updated all pages

--- a/about.html
+++ b/about.html
@@ -3,7 +3,6 @@
 <html>
     <head>
         <script src="Scripts/Main.js"></script>
-        <link href="StyleSheets/Shared.css" rel="stylesheet">
         <link href="StyleSheets/About.css" rel="stylesheet">
         <title>ACBYTES - Alireza Shahbazi</title>
     
@@ -27,7 +26,7 @@
         <div class="sepRedirector" onclick="">
             <h1>Skills</h1>
             <div class="sepRedirector">
-                <h1>C#, Xamarin, ASP.NET</h1>
+                <h1>C#, Xamarin, Maui, .NET</h1>
                 <div class="skillTCont">
                     <div class="twoSecDiv">
                         <span id="csy">0</span>
@@ -117,7 +116,7 @@
             </div>
 
             <div class="sepRedirector">
-                <h1>UE4</h1>
+                <h1>Unreal Engine</h1>
                 <div class="skillTCont">
                     <div class="twoSecDiv">
                         <span id="uey">0</span>
