--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <html>
     <head>
         <script src="Scripts/Main.js"></script>
-        <link href="StyleSheets/Shared.css" rel="stylesheet">
         <link href="StyleSheets/Index.css" rel="stylesheet">
         <title>ACBYTES - Alireza Shahbazi</title>
     
@@ -41,7 +40,7 @@
                 <h1>GitHub</h1>
             </div>
         </a>
-        <a class="aRedirector" onclick="ShowDownloadDialog();" onclick="">
+        <a class="aRedirector" onclick="GetResume();">
             <div class="sepRedirector" id="resumeP">
                 <h1>Resume</h1>
             </div>
