--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,6 @@
 <html>
     <head>
         <script src="Scripts/Main.js"></script>
-        <link href="StyleSheets/Shared.css" rel="stylesheet">
         <link href="StyleSheets/Projects.css" rel="stylesheet">
         <title>ACBYTES - Alireza Shahbazi</title>
     
@@ -19,8 +18,7 @@
         <div class="sepRedirector" onclick="">
             <h1>ReCPP</h1>
             <p>Reimplementing different C++ classes and functionalities for learning purposes. Things such as smart pointers, function, type_traits, etc...</p>
-            <a href="https://github.com/ACBYTES/ReCPP" class="redirector gitButton" target="_blank">
-            </a>
+            <a href="https://github.com/ACBYTES/ReCPP" class="redirector" target="_blank">GitHub</a>
         </div>
         <div class="sepRedirector" onclick="">
             <h1>Online Educational Website (ASP.NET)</h1>
@@ -35,20 +33,19 @@
         <div class="sepRedirector" onclick="">
             <h1>Chunked Data Transfer</h1>
             <p>Written in C# and using the TCP stream, this application can transfer data with configurable chunk sizes, timeouts, etc... Multiple files can be handled at once using one stream and multiple threads with the help of mutexes.</p>
-            <a href="https://github.com/ACBYTES/DataTransfer" class="redirector gitButton" target="_blank">
-            </a>
+            <a href="https://github.com/ACBYTES/DataTransfer" class="redirector" target="_blank">GitHub</a>
         </div>
         <div class="sepRedirector" onclick="">
             <h1>Distant Android Phone Controller</h1>
             <p>Using this application, we can control Android phones with kernel based commands. The phone gets connected to a server and the client on the other side of the server, using the controller is going to see the phone's screen and also send commands and also click arbitrary locations for touch and swipe commands.</p>
         </div>
         <div id="regret" class="sepRedirector" onclick="">
-            <h1>Regret - Game Created Using UE4 and C++</h1>
+            <h1>Regret - Game Created Using Unreal Engine and C++</h1>
             <p>
-                In Progress...
+                Development In Progress...
                 Documentation:
             </p>
-            <a href="https://docs.acbytes.com/categories/regret" class="redirector blogButton" target="_blank"></a>
+            <a href="https://docs.acbytes.com/categories/regret" class="redirector" target="_blank">Documentation</a>
         </div>
         <div class="sepRedirector" onclick="">
             <h1>Project Controller</h1>
