--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
         <meta name="author" content="Alireza Shahbazi - ACBYTES">
     
     </head>
-<body onload="SetDefaultViews(); StartTrackers();">
+<body onload="SetDefaultViews();">
     <div class="cont">
         <div class="sepRedirector" onclick="">
             <h1>About Me:</h1>
@@ -29,10 +29,10 @@
                 <h1>C#, Xamarin, Maui, .NET</h1>
                 <div class="skillTCont">
                     <div class="twoSecDiv">
-                        <span id="csy">0</span>
-                        <span>Year(s)</span>
+                        <!-- <span id="csy">0</span> -->
+                        <span>4 Years</span>
                     </div>
-                    <div class="twoSecDiv">
+                    <!-- <div class="twoSecDiv">
                         <span id="csm">0</span>
                         <span>Month(s)</span>
                     </div>
@@ -51,7 +51,7 @@
                     <div class="twoSecDiv">
                         <span id="css">0</span>
                         <span>Second(s)</span>
-                    </div>
+                    </div> -->
                 </div>
             </div>
 
@@ -59,10 +59,10 @@
                 <h1>C++</h1>
                 <div class="skillTCont">
                     <div class="twoSecDiv">
-                        <span id="cppy">0</span>
-                        <span>Year(s)</span>
+                        <!-- <span id="cppy">0</span> -->
+                        <span>2 Years</span>
                     </div>
-                    <div class="twoSecDiv">
+                    <!-- <div class="twoSecDiv">
                         <span id="cppm">0</span>
                         <span>Month(s)</span>
                     </div>
@@ -81,7 +81,7 @@
                     <div class="twoSecDiv">
                         <span id="cpps">0</span>
                         <span>Second(s)</span>
-                    </div>
+                    </div> -->
                 </div>
             </div>
 
@@ -89,10 +89,10 @@
                 <h1>Unity</h1>
                 <div class="skillTCont">
                     <div class="twoSecDiv">
-                        <span id="uny">0</span>
-                        <span>Year(s)</span>
+                        <!-- <span id="uny">0</span> -->
+                        <span>2 Year</span>
                     </div>
-                    <div class="twoSecDiv">
+                    <!-- <div class="twoSecDiv">
                         <span id="unm">0</span>
                         <span>Month(s)</span>
                     </div>
@@ -111,7 +111,7 @@
                     <div class="twoSecDiv">
                         <span id="uns">0</span>
                         <span>Second(s)</span>
-                    </div>
+                    </div> -->
                 </div>
             </div>
 
@@ -119,10 +119,10 @@
                 <h1>Unreal Engine</h1>
                 <div class="skillTCont">
                     <div class="twoSecDiv">
-                        <span id="uey">0</span>
-                        <span>Year(s)</span>
+                        <!-- <span id="uey">0</span> -->
+                        <span>2 Years</span>
                     </div>
-                    <div class="twoSecDiv">
+                    <!-- <div class="twoSecDiv">
                         <span id="uem">0</span>
                         <span>Month(s)</span>
                     </div>
@@ -141,7 +141,7 @@
                     <div class="twoSecDiv">
                         <span id="ues">0</span>
                         <span>Second(s)</span>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
