Updated Resume, Removed Hover Style From Projects

--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,15 @@
 <body onload="SetDefaultViews();">
     <div class="cont">
         <div class="sepRedirector" onclick="">
+            <h1>BoushehriTeam.com</h1>
+            <p>A robust platform supporting over 1,000 users at Boushehri Financial Consulting, designed to streamline operations, enhance content management, and track team progress.</p>
+            <a href="https://boushehriteam.com" class="redirector" target="_blank">Website</a>
+        </div>
+        <div class="sepRedirector" onclick="">
+            <h1>Admin Assistance Master App</h1>
+            <p>Developed a suite of five apps that automated 50% of the administrative workload for Boushehri Financial Consulting, allowing the team to focus on strategic priorities.</p>
+        </div>
+        <div class="sepRedirector" onclick="">
             <h1>ReCPP</h1>
             <p>Reimplementing different C++ classes and functionalities for learning purposes. Things such as smart pointers, function, type_traits, etc...</p>
             <a href="https://github.com/ACBYTES/ReCPP" class="redirector" target="_blank">GitHub</a>
